// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionCreationView > Storybook snapshots > renders the creation state 1`] = `
<div>
  <div
    class="Flex-module_flex SectionCreationView-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-6x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60"
    >
      Sections are only for you
    </span>
    <form
      class="_root_1o4d9_17 SectionCreationView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
           
          Section name
        </label>
        <input
          class="_control_d83jn_10"
          id="radix-react-use-id-1"
          name="sectionName"
          required=""
          title=""
          value=""
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`SectionCreationView > Storybook snapshots > renders the edition state 1`] = `
<div>
  <div
    class="Flex-module_flex SectionCreationView-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-6x); --mx-flex-wrap: nowrap;"
  >
    <form
      class="_root_1o4d9_17 SectionCreationView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
           
          Section name
        </label>
        <input
          class="_control_d83jn_10"
          id="radix-react-use-id-1"
          name="sectionName"
          required=""
          title=""
          value="My section"
        />
      </div>
    </form>
  </div>
</div>
`;
